// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages Test Suite pages/404 Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <h4
        className="sc-AxiKw sc-AxhUy gGHSWu"
      >
        Man, I hate when this happens...
      </h4>
      Find your way 
      <a
        className="sc-AxirZ sc-AxgMl dCBnMA"
        href="/about-me"
        target="_blank"
        variant="underlined"
      >
        Home
      </a>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/about-me Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ dOlGtM"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl fFXmft"
          href="mailto:contact@fake.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-AxirZ iyLeer"
            width={
              Object {
                "_": 32,
                "mobileM": 38,
              }
            }
          >
            <div
              className=" gatsby-image-wrapper"
              style={
                Object {
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <div
                aria-hidden={true}
                style={
                  Object {
                    "paddingBottom": "100%",
                    "width": "100%",
                  }
                }
              />
              <img
                alt=""
                aria-hidden={true}
                src="data:image/png;base64"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "transitionDelay": "500ms",
                    "width": "100%",
                  }
                }
              />
              <picture>
                <source
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                />
                <img
                  alt="FakeContact"
                  loading="lazy"
                  onLoad={[Function]}
                  src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "objectFit": "cover",
                      "objectPosition": "center",
                      "opacity": 0,
                      "position": "absolute",
                      "top": 0,
                      "transition": "opacity 500ms",
                      "width": "100%",
                    }
                  }
                />
              </picture>
              <noscript
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeContact\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                  }
                }
              />
            </div>
          </div>
        </a>
      </div>
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "100%",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "borderRadius": 8,
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt="Cover"
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "borderRadius": 8,
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"Cover\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        Hi there, I'm Jeremie!
      </p>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        I'm currently working at 
        <a
          className="sc-AxirZ sc-AxgMl kNxdkB"
          href="https://fakecompany.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "25px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="FakeCompany"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "25px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeCompany\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </span>
        </a>
         as a Full Stack Engineer.
      </p>
      <p
        className="sc-AxiKw AaxGK"
        fontSize={20}
      >
        I particularly enjoy working with those technologies:
      </p>
      <div
        className="sc-AxirZ QMTIg sc-Axmtr cGAGVQ"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl bWkxQa"
          href="https://image.tech"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "52px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "52px",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="TechImage"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "52px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "52px",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"TechImage\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="sc-AxirZ hzDttm"
        fontSize={20}
      >
        ▾ By the way, this is where I live, 
        <a
          className="sc-AxirZ sc-AxgMl fFXmft"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          San Francisco
        </a>
        ! ▾
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/index Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <section
      className="sc-AxirZ dsfwVk"
    />
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/posts Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ sc-fzozJi fHyyXf"
      >
        <ul
          className="sc-AxirZ sc-AxmLO kLhtPY"
        >
          <label
            className="sc-AxiKw fvnIPL"
            color="secondary"
            display="block"
            fontSize={32}
            fontWeight="semi-bold"
          >
            2019
          </label>
          <li
            className="sc-AxirZ dAglKd"
            display="flex"
            fontSize={24}
            fontWeight="semi-bold"
          >
            <span
              className="sc-AxirZ vPLqU"
              color="primary"
              fontSize={16}
              fontWeight="bold"
            >
              AUG-08
            </span>
            <a
              className="sc-AxirZ sc-AxgMl fFXmft"
              href="/posts/test"
              target="_blank"
            >
              Test Post
            </a>
          </li>
        </ul>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`pages Test Suite pages/skills Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AxjAm gjSqLb"
    onClick={[Function]}
    width={72}
  >
    <div
      className="sc-AxirZ izmieD"
      display="flex"
      width="100%"
    >
      <svg
        className="sc-AxhCb kJWRDU"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AxiKw liBuIY"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AxirZ cViufk"
    display="flex"
  >
    <a
      className="sc-AxirZ sc-AxgMl fDFUVy"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": 80,
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": 80,
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": 80,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": 80,
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AxirZ bohtKf"
        display="flex"
      >
        <h3
          className="sc-AxiKw sc-AxhUy gXcNNY"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AxiKw sc-AxhUy jJfuMr"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AxirZ fMDwnS"
      display="flex"
    >
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AxirZ dHoOEb"
        display="flex"
      >
        <a
          className="sc-AxirZ sc-AxgMl iepZAN"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            className="sc-AxhCb bgTglM sc-AxhCb bgTglM"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AxirZ hOIrHI"
  >
    <h1
      className="sc-AxiKw sc-AxhUy dcvVlS"
    >
      Test Page
    </h1>
    <section
      className="sc-AxirZ dsfwVk"
    >
      <div
        className="sc-AxirZ klTXie"
      >
        <div
          className="sc-AxirZ bwqVmW"
          display="flex"
        >
          <span
            className="sc-AxiKw gyhhhJ"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            SKILLS SECTION 0
          </span>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              6
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 1
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              9
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
      <div
        className="sc-AxirZ klTXie"
      >
        <div
          className="sc-AxirZ bwqVmW"
          display="flex"
        >
          <span
            className="sc-AxiKw gyhhhJ"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            SKILLS SECTION 1
          </span>
        </div>
        <div
          className="sc-AxirZ dUjigO"
          display="flex"
          height={22}
        >
          <span
            className="sc-AxiKw eCKgrb"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AxirZ kJjEfF"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AxiKw hMIOxo"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              8
              /
              10
            </span>
          </div>
          <div
            className="sc-AxirZ jDCePp"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AxirZ kKTHPg"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ jVbrZf"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
            <span
              className="sc-AxirZ eQFboi"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AxirZ fnZGlN"
  >
    <a
      className="sc-AxirZ sc-AxgMl TWyuE"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AxirZ bdZDnf"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
  <div
    className="sc-AxirZ eJMeAh sc-AxheI kfAfIX"
    display="flex"
    width={
      Object {
        "mobileL": 256,
      }
    }
  >
    <div
      className="sc-AxirZ hUNjvI"
      display="flex"
    >
      <button
        className="sc-AxjAm gLImuE"
        onClick={[Function]}
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": undefined,
              "overflow": "hidden",
              "position": "relative",
              "width": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64"
            style={
              Object {
                "height": 32,
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": 32,
              }
            }
          />
          <picture>
            <source
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
              srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              style={
                Object {
                  "height": 32,
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": 32,
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
        <span
          className="sc-AxiKw eJUWy"
          fontSize={18}
        >
          Install App
        </span>
        <svg
          className="sc-AxhCb ftPBRw"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M18 1.01L8 1c-1.1 0-2 .9-2 2v3h2V5h10v14H8v-1H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM10 15h2V8H5v2h3.59L3 15.59 4.41 17 10 11.41z"
            fill="white"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <button
      className="sc-AxjAm fSOzOj"
      onClick={[Function]}
    >
      <svg
        className="sc-AxhCb bgTglM"
        height={32}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill="white"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
  </div>,
]
`;
